--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -2,7 +2,7 @@
   // @extend .logoFull;
   position:relative;
   // margin-top: px-to-rem(30px);
-  margin-top:px-to-rem(40px);
+  // margin-top:px-to-rem(40px);
 }
 
 .searchFieldContainerInner {
